--- a/sistema-de-citas/src/main/resources/application.properties
+++ b/sistema-de-citas/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=Chumbipro15#
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
 logging.level.org.springframework.security=DEBUG
+spring.sql.init.continue-on-error=true
